If Code or VUID fails to save, other VHAT ID on same concept or description will also not save.     * Fixed so state controls on concept editor do not get eclipsed by other fields in IE. (Jazz: 549180)     * Defaulted New Concept panel Designations drop-down list to Preferred Name     * In concept editor, fixed the relationships autosuggest box so that scrollbars in IE will not overlay the dropdown menu

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,7 @@ html, body{
     padding: 0;
     display: flex;
     flex-direction: column;
+    -ms-overflow-style: scrollbar;
 }
 body.komet_dashboard, body.komet_dashboard .ui-widget, body.komet_dashboard .ui-widget button{
     font-size: 14px;
@@ -415,6 +416,9 @@ div.komet-confirmation-dialog{
 }
 .komet-delete{
     color:red;
+}
+.komet-state-field{
+    width: 80px;
 }
 
 // KOMET Navigation styles
@@ -1094,7 +1098,7 @@ td.komet-concept-table-nested-indicator.komet-concept-table-nested-indicator-ope
 
 }
 .komet-concept-edit .komet-containing-block > div{
-    flex: 0 0 33%;
+    flex: 1 1 auto;
     flex-wrap: nowrap;
     display: flex;
     margin-right: 5px;
